# package_creation_tutorial

./: .buildinfo  .buildinfo.bak  .coverage  .pre-commit-config.yaml  genindex.html  index.html  main.py  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: tests.yaml
_modules/: index.html
_modules/package_creation_tutorial/: string_ops.html
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py
src/package_creation_tutorial/: string_ops.py
tests/: test_string_ops.py
