[tool.poetry]
name = "package-creation-tutorial"
version = "0.1.0"
description = ""
authors = ["Guembri01 <bilel.guembri@outlook.fr>"]
readme = "README.md"
packages = [{include = "package_creation_tutorial", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
